--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -68,14 +68,14 @@ const skillColor = "navy";
     </main>
   </Layout>
 </body>
-<style >
+<style define:vars={{skillColor}}>
   main {
     margin: auto;
     padding: 1.5rem;
     max-width: 60ch;
   }
   .skill {
-    color: green;
+    color: var(--skillColor);
     font-weight: semi-bold;
   }
 </style>
