--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,10 +1,9 @@
 ---
+import Navigation from "../components/Navigation.astro";
 ---
 
 <body>
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
+  <Navigation/>
 
   <h1>My Astro Learning Blog</h1>
   <p>This is where I will post about my journey learning Astro.</p>
