--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
+import Navigation from "../components/Navigation.astro";
 import Layout from "../layouts/Layout.astro";
 const pageTitle = "My Astro Learning Blog";
 ---
 
 <Layout title="Welcome to Astro.">
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
+  <Navigation/>
   <main>
     <h1>{pageTitle}</h1>
     <p>This is where I will post about my journey learning Astro.</p>
