--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import Footer from "./Footer.astro";
+import Header from "./Header.astro";
+
 export interface Props {
   title: string;
 }
@@ -16,7 +19,9 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <Header/>
     <slot />
+    <Footer />
   </body>
 </html>
 <style is:global>
