--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,15 +1,19 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Layout from "../layouts/Layout.astro";
+const pageTitle = "My Astro Learning Blog";
+import "../styles/global.css";
+
+
 ---
 
 <body>
-  <Navigation/>
-
-  <h1>My Astro Learning Blog</h1>
+  <Layout title={pageTitle}>
+  <h1>{pageTitle}</h1>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
     <li><a href="/posts/post-1/">Post 1</a></li>
     <li><a href="/posts/post-2/">Post 2</a></li>
     <li><a href="/posts/post-3/">Post 3</a></li>
   </ul>
+  </Layout>
 </body>
