--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,9 +1,11 @@
 ---
+import Hamburger from "../components/Hamburger.astro";
 import Navigation from "../components/Navigation.astro";
-
 ---
+
 <header>
   <nav>
-    <Navigation/>
+    <Hamburger />
+    <Navigation />
   </nav>
 </header>
