--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,9 +19,12 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <Header/>
+    <Header />
     <slot />
     <Footer />
+<script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
 <style is:global>
