--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Footer from "./Footer.astro";
 import Header from "./Header.astro";
+import "../styles/global.css";
 
 export interface Props {
   title: string;
