use Astro props

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 const pageTitle = "My Astro Learning Blog";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout pageTitle="Welcome to Astro.">
   <main>
     <h1>{pageTitle}</h1>
     <p>This is where I will post about my journey learning Astro.</p>
