--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,10 +4,10 @@ import Header from "./Header.astro";
 import "../styles/global.css";
 
 export interface Props {
-  title: string;
+  pageTitle: string;
 }
 
-const { title } = Astro.props;
+const { pageTitle } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -17,13 +17,13 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
     <Header />
     <slot />
     <Footer />
-<script>
+    <script>
       import "../scripts/menu.js";
     </script>
   </body>
