--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,35 +37,34 @@ const textCase = "lowerrcase";
   }
 </style>
 
-<body>
-  <Layout title={pageTitle}>
-    <main>
-      <h1>{pageTitle}</h1>
-      <h2>... and my new Astro site!</h2>
-      <p>Here are a few facts about me:</p>
-      <ul>
-        <li>My name is {identity.firstName}.</li>
-        <li>
-          I live in {identity.country} and I work as a {identity.occupation}.
-        </li>
-        {
-          identity.hobbies.length >= 3 && (
-            <li>
-              Three of my hobbies are: {identity.hobbies[0]},
-              {identity.hobbies[1]}, and {identity.hobbies[2]}
-            </li>
-          )
-        }
-      </ul>
-      <p>My skills are:</p>
-      <ul>
-        {skills.map((skill) => <li class="skill">{skill}</li>)}
-      </ul>
-
+  <Layout pageTitle={pageTitle}>
+    <h1>{pageTitle}</h1>
+    <h2>... and my new Astro site!</h2>
+    <p>Here are a few facts about me:</p>
+    <ul>
+      <li>My name is {identity.firstName}.</li>
+      <li>
+        I live in {identity.country} and I work as a {identity.occupation}.
+      </li>
+      {
+        identity.hobbies.length >= 3 && (
+          <li>
+            Three of my hobbies are: {identity.hobbies[0]},{identity.hobbies[1]}
+            , and {identity.hobbies[2]}
+          </li>
+        )
+      }
+    </ul>
+    <p>My skills are:</p>
+    <ul>
+      {skills.map((skill) => <li class="skill">{skill}</li>)}
+    </ul>
+    <div>
       {student && <p>I am still in school.</p>}
+    </div>
 
-      <p>I have {quantity + 8} pairs of {footwear}</p>
-
+    <p>I have {quantity + 8} pairs of {footwear}</p>
+    <div>
       {
         operatingSystem === "macOS" ? (
           <p>I am using a Mac.</p>
@@ -73,6 +72,5 @@ const textCase = "lowerrcase";
           <p>I am not using a Mac.</p>
         )
       }
-    </main>
+    </div>
   </Layout>
-</body>
