--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,8 +3,7 @@ import Layout from "../layouts/Layout.astro";
 const pageTitle = "My Astro Learning Blog";
 ---
 
-<body>
-  <Layout title={pageTitle}>
+  <Layout pageTitle={pageTitle}>
     <h1>{pageTitle}</h1>
     <p>This is where I will post about my journey learning Astro.</p>
     <ul>
@@ -13,4 +12,3 @@ const pageTitle = "My Astro Learning Blog";
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
   </Layout>
-</body>
