--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,5 +1,10 @@
 ---
+interface Props {
+  title: string;
+  url: string;
+}
+
 const { title, url } = Astro.props;
 ---
 
-<li><a href={url}>{title}</a></li>
+<li><a href={`/posts/${url}`}>{title}</a></li>
