--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,10 @@
 ---
+import { getCollection } from "astro:content";
 import BlogPost from "../components/BlogPost.astro";
 import Layout from "../layouts/Layout.astro";
-const allPosts = await Astro.glob("../pages/posts/*.md");
+
+export const prerender = true;
+const allPosts = await getCollection("posts");
 const pageTitle = "My Astro Learning Blog";
 ---
 
@@ -11,7 +14,7 @@ const pageTitle = "My Astro Learning Blog";
   <ul>
     {
       allPosts.map((post) => (
-        <BlogPost url={post.url} title={post.frontmatter.title} />
+        <BlogPost url={post.slug} title={post.data.title} />
       ))
     }
   </ul>
