--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,43 +2,29 @@
 import Footer from "./Footer.astro";
 import Header from "./Header.astro";
 import "../styles/global.css";
+import { SEO_INFO } from '../consts';
 const { pageTitle } = Astro.props;
----
 
+type Props = { pageTitle: string };
+
+---
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    {SEO_INFO.map((tag) => <meta name={tag.name} content={tag.content} />)}
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>{pageTitle}</title>
   </head>
-  <body>
+  <body class="bg-slate-50 dark:bg-slate-800 mx-auto">
     <Header />
     <slot />
     <Footer />
     <script>
+      import '../load-gallery.js';
       import "../scripts/menu.js";
     </script>
   </body>
 </html>
-<style is:global>
-  :root {
-    --accent: 124, 58, 237;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      #da62c4 30%,
-      white 60%
-    );
-  }
-  html {
-    font-family: system-ui, sans-serif;
-    background-color: #f6f6f6;
-  }
-  code {
-    font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-      DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
-  }
-</style>
