--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,76 +1,68 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from '../layouts/Layout.astro';
+import { PERSONAL_INFO } from '../consts';
 
-const pageTitle = "About Me";
+const { role, name, avatar, contact, about } = PERSONAL_INFO;
 
-const identity = {
-  firstName: "yoko",
-  country: "Japan",
-  occupation: "Web creator",
-  hobbies: ["photography", "video creation", "singing"],
-};
-
-const skills = [
-  "HTML",
-  "CSS",
-  "JavaScript",
-  "React",
-  "NextJs",
-  "Astro",
-  "Writing Docs",
-];
-const operatingSystem = "macOS";
-const quantity = 3;
-const footwear = "sandals";
-const student = false;
-
-const skillColor = "navy";
-const fontWeight = "semi-bold;";
-const textCase = "lowerrcase";
+const title = `${name} - About`;
 ---
 
-<style define:vars={{ skillColor, fontWeight, textCase }}>
-  .skill {
-    color: var(--skillColor);
-    font-weight: var(--fontWeight);
-    text-transform: var(--textCase);
-  }
-</style>
+<Layout pageTitle={title}>
+  <div class="py-4 sm:py-6 lg:py-8 flex flex-col justify-between h-screen">
+    <main class="mb-auto align-middle flex flex-col items-center">
+      <div class="my-8 sm:my-12">
+        <h2
+          class="text-gray-800 dark:text-white text-2xl lg:text-3xl text-center mb-4 md:mb-6 font-semibold"
+        >
+          About me
+        </h2>
+      </div>
 
-<Layout pageTitle={pageTitle}>
-  <h1>{pageTitle}</h1>
-  <h2>... and my new Astro site!</h2>
-  <p>Here are a few facts about me:</p>
-  <ul>
-    <li>My name is {identity.firstName}.</li>
-    <li>
-      I live in {identity.country} and I work as a {identity.occupation}.
-    </li>
-    {
-      identity.hobbies.length >= 3 && (
-        <li>
-          Three of my hobbies are: {identity.hobbies[0]},{identity.hobbies[1]},
-          and {identity.hobbies[2]}
-        </li>
-      )
-    }
-  </ul>
-  <p>My skills are:</p>
-  <ul>
-    {skills.map((skill) => <li class="skill">{skill}</li>)}
-  </ul>
-  <div>
-    {student && <p>I am still in school.</p>}
-  </div>
+      <div
+        class="bg-white dark:bg-slate-900 py-4 sm:py-8 w-fit mx-4 rounded-xl"
+      >
+        <div class="max-w-screen-lg px-4 md:px-8">
+          <div class="grid sm:grid-cols-2 gap-8 items-center">
+            <div
+              class="flex flex-col justify-center items-center sm:items-start py-8 sm:py-24"
+            >
+              <p
+                class="text-indigo-500 text-sm md:text-base font-semibold uppercase mb-4"
+              >
+                {role}
+              </p>
+              <h1
+                class="text-gray-800 dark:text-gray-200 text-2xl md:text-3xl font-bold text-center sm:text-left mb-4"
+              >
+                {name}
+              </h1>
 
-  <p>I have {quantity + 8} pairs of {footwear}</p>
-  <div>
-    {
-      operatingSystem === "macOS" ? (
-        <p>I am using a Mac.</p>
-      ) : (
-        <p>I am not using a Mac.</p>
-      )
-    }
+              {
+                about
+                  .split('.')
+                  .map((text) => (
+                    <p class="text-gray-500 md:text-lg text-center sm:text-left mb-8">
+                      {text}
+                    </p>
+                  ))
+              }
+
+              <a
+                href={contact}
+                class="inline-block bg-gray-200 hover:bg-gray-300 focus-visible:ring ring-indigo-300 text-gray-500 active:text-gray-700 text-sm md:text-base font-semibold text-center rounded-lg outline-none transition duration-100 px-8 py-3"
+                >Contact</a
+              >
+            </div>
+
+            <div
+              class="h-fit bg-gray-100 max-w-xs sm:max-w-md mx-auto overflow-hidden shadow-lg rounded-r-full relative object-cover object-center"
+            >
+              <img src={avatar} alt="Portrait" width={600}  />
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
   </div>
 </Layout>
