--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -2,16 +2,10 @@
 import Social from "../components/Social.astro";
 ---
 
-<style>
-  footer {
-    display: flex;
-    gap: 1rem;
-    margin-top: 2rem;
-  }
-</style>
-
-<footer>
+<footer class="flex flex-col items-center mt-12 gap-4 mb-4">
+   <div class="flex gap-4">
   <Social platform="twitter" username="yokoiwasaki6" />
   <Social platform="github" username="withastro" />
-  <Social platform="youtube" username="@user-ol8bo3nk6i" />
+  <Social platform="youtube" username="@user-mu2nn6nt6e" />
+  </div>
 </footer>
