--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -2,13 +2,13 @@
 const { platform, username } = Astro.props;
 ---
 
-<a href={`https://www.${platform}.com/${username}`}>{platform}</a>
+<a href={`https://www.${platform}.com/${username}`} target="_blank">{platform}</a>
 
 <style>
   a {
     padding: 0.5rem 1rem;
     color: white;
-    background-color: #4c1d95;
+    background-color: #a58ec8;
     text-decoration: none;
   }
 </style>
