--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,11 +5,11 @@ import Layout from "../layouts/Layout.astro";
 
 export const prerender = true;
 const allPosts = await getCollection("posts");
-const pageTitle = "My Astro Learning Blog";
+const title = `${name} - blog`;
 ---
 
-<Layout pageTitle={pageTitle}>
-  <h1>{pageTitle}</h1>
+<Layout pageTitle={title}>
+  <h1>{title}</h1>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
     {
