--- a/src/components/Artists.astro
+++ b/src/components/Artists.astro
@@ -21,7 +21,7 @@ export const prerender = true;
       <div class="max-w-screen-xl px-4 md:px-8 mx-auto">
         <div
           id="my-gallery"
-          class="pswp-gallery grid grid-cols-1 sm:grid-cols-3 gap-4 md:gap-6 xl:gap-8  gallery"
+          class="pswp-gallery grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 md:gap-6 xl:gap-8  gallery"
         >
           {
              images.map((image) => (
