create about folder

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import { PERSONAL_INFO } from '../consts';
+import Layout from '../../layouts/Layout.astro';
+import { PERSONAL_INFO } from '../../consts';
 
 const { role, name, avatar, contact, about } = PERSONAL_INFO;
 
