--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -4,7 +4,7 @@ import Navigation from "../components/Navigation.astro";
 ---
 
 <header>
-  <nav>
+  <nav class="flex flex-row-reverse">
     <Hamburger />
     <Navigation />
   </nav>
