--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,7 +3,7 @@
 
 <div class="nav-links">
   <a href="/">Home</a>
-  <a href="/whoami/">About</a>
+  <a href="/about/">About</a>
   <a href="/blog/">Blog</a>
   <a href="/tags/">Tags</a>
 </div>
