fix hight of about page

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -8,7 +8,7 @@ const title = `${name} - About`;
 ---
 
 <Layout pageTitle={title}>
-  <div class="py-4 sm:py-6 lg:py-8 flex flex-col justify-between h-screen">
+  <div class="py-4 sm:py-6 lg:py-8 flex flex-col justify-between h-full">
     <main class="mb-auto align-middle flex flex-col items-center">
       <div class="my-8 sm:my-12">
         <h2
