--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,11 +1,41 @@
 ---
-import Social from "../components/Social.astro";
+import { ROUTES, SOCIAL, PERSONAL_INFO } from '../consts';
+import { Icon } from 'astro-icon';
 ---
 
-<footer class="flex flex-col items-center mt-12 gap-4 mb-4">
-   <div class="flex gap-4">
-  <Social platform="twitter" username="yokoiwasaki6" />
-  <Social platform="github" username="withastro" />
-  <Social platform="youtube" username="@user-mu2nn6nt6e" />
+<footer>
+  <div class="flex flex-col items-center mt-12 gap-4 mb-4">
+    <div class="flex gap-4">
+      {
+        SOCIAL.map((social) => (
+          <a href={social.href} target="_blank">
+            <Icon
+              name={social.icon}
+              aria-label={social.label}
+              class="w-5 h-5 text-[#ff9776]"
+              fill="currentColor"
+              width="24"
+              height="24"
+            />
+          </a>
+        ))
+      }
+    </div>
+
+    <nav
+      class="flex flex-wrap justify-center md:justify-start gap-x-4 gap-y-2 md:gap-6"
+    >
+      {ROUTES.map((route) => <a href={route.href}>{route.label}</a>)}
+    </nav>
+
+    <div class="text-sm text-center text-[#ff9776]">
+      {`© ${new Date().getFullYear()}`} - {PERSONAL_INFO.name}
+    </div>
   </div>
 </footer>
+
+<style>
+  a {
+    @apply text-gray-500 hover:text-gray-600 active:text-gray-600 dark:hover:text-gray-400 dark:active:text-gray-400 transition-colors;
+  }
+</style>
