--- a/src/components/Artists.astro
+++ b/src/components/Artists.astro
@@ -1,5 +1,6 @@
 ---
-import { PERSONAL_INFO, images } from "../consts";
+import { PERSONAL_INFO } from "../consts";
+import {  images } from "./Artist";
 export const prerender = true;
 ---
   <div class="py-4 sm:py-6 lg:py-8 flex flex-col justify-between h-full max-w-5xl">
@@ -18,7 +19,7 @@ export const prerender = true;
         </p>
       </div>
 
-      <div class="max-w-screen-xl px-4 md:px-8 mx-auto">
+      <div class="max-w-screen-xl px-6 md:px-8 mx-auto">
         <div
           id="my-gallery"
           class="pswp-gallery grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 md:gap-6 xl:gap-8  gallery"
@@ -30,7 +31,7 @@ export const prerender = true;
                 data-cropped="true"
                 data-pswp-width={image.size.width}
                 data-pswp-height={image.size.height}
-                class="group h-72   flex justify-end items-end bg-gray-100 overflow-hidden rounded-xl shadow-lg relative gallery-item hover:shadow-xl"
+                class="group h-72 flex justify-end items-end bg-gray-100 overflow-hidden rounded-xl shadow-lg relative gallery-item hover:shadow-xl"
               >
                 <div class="w-full h-full flex object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200 text-transparent">
                   <img
