--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,14 +31,14 @@ h1 {
   width: 40px;
   height: 5px;
   margin-bottom: 10px;
-  background-color: #ff9776;
+  background-color: #808080;
 }
 
 .nav-links {
   width: 100%;
   top: 5rem;
   left: 48px;
-  background-color: #ff9776;
+  background-color: #808080;
   display: none;
   margin: 0;
 }
@@ -56,7 +56,7 @@ h1 {
 .nav-links a:hover,
 a:focus {
   color:#fff;
-  background-color: #ff9776;
+  background-color: #808080;
 }
 
 .expanded {
