Add 連盟 logo in Header

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,8 @@
 ---
 import Footer from "./Footer.astro";
-import Header from "./Header.astro";
 import "../styles/global.css";
+import Header from "./Header.astro"
+
 import { SEO_INFO } from '../consts';
 const { pageTitle } = Astro.props;
 
@@ -19,9 +20,8 @@ type Props = { pageTitle: string };
     <title>{pageTitle}</title>
   </head>
   <body class="flex flex-col min-h-screen bg-slate-50 dark:bg-slate-800 mx-auto">
-    <Header />
+    <Header isSticky showToggleTheme />
     <div class="grow">
-
       <slot />
     </div>
       <Footer />
@@ -29,5 +29,23 @@ type Props = { pageTitle: string };
       import '../load-gallery.js';
       import "../scripts/menu.js";
     </script>
+    <script is:inline>
+  const theme = (() => {
+    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
+      return localStorage.getItem("theme");
+    }
+    if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+      return "dark";
+    }
+    return "light";
+  })();
+
+  if (theme === "light") {
+    document.documentElement.classList.remove("dark");
+  } else {
+    document.documentElement.classList.add("dark");
+  }
+  window.localStorage.setItem("theme", theme);
+</script>
   </body>
 </html>
