--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,11 +1,50 @@
 ---
-import Hamburger from "../components/Hamburger.astro";
-import Navigation from "../components/Navigation.astro";
+import Logo from "../components/Logo.astro";
+
+interface Link {
+  text?: string;
+  href?: string;
+  ariaLabel?: string;
+  icon?: string;
+}
+
+interface ActionLink extends Link {
+  type?: string;
+}
+
+interface MenuLink extends Link {
+  links?: Array<Link>;
+}
+
+export interface Props {
+  links?: Array<MenuLink>;
+  actions?: Array<ActionLink>;
+  isSticky?: boolean;
+  showToggleTheme?: boolean;
+  showRssFeed?: boolean;
+  position?: string;
+}
+
+const {
+  isSticky = false,
+  position = 'center',
+} = Astro.props;
 ---
 
-<header>
-  <nav class="flex flex-row-reverse">
-    <Hamburger />
-    <Navigation />
-  </nav>
+<header
+  class:list={[
+    { sticky: isSticky, relative: !isSticky },
+    'top-0 z-40 flex-none mx-auto w-full transition-all ease-in duration-100',
+  ]}
+  id="header"
+>
+  <div class="py-3 px-3 md:py-3.5 md:px-4 mx-auto w-full md:flex md:justify-between max-w-7xl">
+    <div class:list={[{"mr-auto": position === "right"}, "flex justify-between"]}>
+      <a class="flex items-center" href="https://www.zama-musicartist.info/" target="_blank">
+        <Logo />
+      </a>
+      <div />
+    </div>
+
+  </div>
 </header>
