--- a/src/components/Artists.astro
+++ b/src/components/Artists.astro
@@ -3,7 +3,7 @@ import { PERSONAL_INFO } from "../consts";
 import {  images } from "./Artist";
 export const prerender = true;
 ---
-  <div class="py-4 sm:py-6 lg:py-8 flex flex-col justify-between h-full max-w-5xl">
+  <div class="py-4 sm:py-6 lg:py-8 flex flex-col justify-between h-full">
     <main class="mb-auto">
       <div class="my-8 sm:my-12">
         <h2
