--- a/src/components/Artists.astro
+++ b/src/components/Artists.astro
@@ -19,7 +19,7 @@ export const prerender = true;
         </p>
       </div>
 
-      <div class="max-w-screen-xl px-6 md:px-8 mx-auto">
+      <div class="px-6 md:px-8 mx-auto">
         <div
           id="my-gallery"
           class="pswp-gallery grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 md:gap-6 xl:gap-8  gallery"
@@ -37,7 +37,6 @@ export const prerender = true;
                   <img
                     src={image.href}
                     alt={image.label}
-                    // format="webp"
                     width={image.size.width / 3}
                   />
                 </div>
