--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ type Props = { pageTitle: string };
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>{pageTitle}</title>
   </head>
-  <body class="min-h-screen bg-slate-50 dark:bg-slate-800 mx-auto max-w-5xl">
+  <body class="min-h-screen bg-slate-50 dark:bg-slate-800 mx-auto max-w-5xl px-3">
     <Header isSticky />
     <div class="grow">
       <slot />
