--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { ROUTES, SOCIAL, PERSONAL_INFO } from '../consts';
+import { ROUTES, SOCIAL } from '../consts';
 import { Icon } from 'astro-icon';
 ---
 
@@ -12,7 +12,7 @@ import { Icon } from 'astro-icon';
             <Icon
               name={social.icon}
               aria-label={social.label}
-              class="w-5 h-5 text-[#ff9776]"
+              class="w-5 h-5 text-[#ff9776] hover:text-gray-400"
               fill="currentColor"
               width="24"
               height="24"
@@ -23,13 +23,14 @@ import { Icon } from 'astro-icon';
     </div>
 
     <nav
-      class="flex flex-wrap justify-center md:justify-start gap-x-4 gap-y-2 md:gap-6"
+      class="flex flex-wrap justify-center md:justify-start gap-x-4 gap-y-2 md:gap-6 h-12 items-baseline"
     >
       {ROUTES.map((route) => <a href={route.href}>{route.label}</a>)}
+      <a href="/creator" class="text-xs text-gray-400">Creator</a>
     </nav>
 
-    <div class="text-sm text-center text-[#ff9776]">
-      {`© ${new Date().getFullYear()}`} - {PERSONAL_INFO.name}
+    <div class="text-sm text-center text-[#ff9776] hover:text-gray-400">
+      {`© ${new Date().getFullYear()}`} - Zama City The Music Artist Association
     </div>
   </div>
 </footer>
