--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -40,7 +40,7 @@ const {
 >
   <div class="py-3 px-3 md:py-3.5 md:px-4 mx-auto w-full md:flex md:justify-between max-w-7xl">
     <div class:list={[{"mr-auto": position === "right"}, "flex justify-between"]}>
-      <a class="flex items-center" href="https://www.zama-musicartist.info/" target="_blank">
+      <a class="flex items-center" href="/" target="_blank">
         <Logo />
       </a>
       <div />
