--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import { PERSONAL_INFO } from '../../consts';
+import Layout from "../../layouts/Layout.astro";
+import { PERSONAL_INFO } from "../../consts";
 
-const { role, name, avatar, contact, about } = PERSONAL_INFO;
+const { name } = PERSONAL_INFO;
 
 const title = `${name} - About`;
 ---
@@ -11,11 +11,9 @@ const title = `${name} - About`;
   <div class="py-4 sm:py-6 lg:py-8 flex flex-col justify-between h-full">
     <main class="mb-auto align-middle flex flex-col items-center">
       <div class="my-8 sm:my-12">
-        <h2
-          class="text-gray-800 dark:text-white text-2xl lg:text-3xl text-center mb-4 md:mb-6 font-semibold"
-        >
-          About me
-        </h2>
+        <p class="text-indigo-500 text-2xl md:text-3xl font-bold mb-4">
+          About
+        </p>
       </div>
 
       <div
@@ -26,43 +24,30 @@ const title = `${name} - About`;
             <div
               class="flex flex-col justify-center items-center sm:items-start py-8 sm:py-24"
             >
-              <p
-                class="text-indigo-500 text-sm md:text-base font-semibold uppercase mb-4"
-              >
-                {role}
-              </p>
-              <h1
-                class="text-gray-800 dark:text-gray-200 text-2xl md:text-3xl font-bold text-center sm:text-left mb-4"
-              >
-                {name}
+
+              <h1 class="text-gray-500 md:text-lg sm:text-left mb-8">
+                座間市演奏家連盟は、平成4年約20名の会員により、設立されました。
+                近年は会員数も80名と増え、座間市を芸術の香あふれる街にするべく市民音楽祭や市庁舎でのロビーコンサートなど、地域に根ざしたクラッシックコンサート活動を活発に行なっております。
+                また、公民館・コミュニティーセンター・児童館などでの地域の人たちのためのミニコンサートも座間市役所生涯学習課からの依頼を受け、草の根的活動として好評をいただいております。
+                今後も、さらに身近にクラッシック音楽を気軽に楽しんでもらえるミニコンサートの企画を広げていきたいと考えております。
               </h1>
-
-              {
-                about
-                  .split('.')
-                  .map((text) => (
-                    <p class="text-gray-500 md:text-lg text-center sm:text-left mb-8">
-                      {text}
-                    </p>
-                  ))
-              }
-
-              <a
-                href={contact}
-                class="inline-block bg-gray-200 hover:bg-gray-300 focus-visible:ring ring-indigo-300 text-gray-500 active:text-gray-700 text-sm md:text-base font-semibold text-center rounded-lg outline-none transition duration-100 px-8 py-3"
-                >Contact</a
-              >
+              <p class="text-gray-500 md:text-lg text-center sm:text-left mb-8">
+                座間市演奏家連盟 会長　山岸　陽子
+              </p>
             </div>
 
             <div
               class="h-fit bg-gray-100 max-w-xs sm:max-w-md mx-auto overflow-hidden shadow-lg rounded-r-full relative object-cover object-center"
             >
-              <img src={avatar} alt="Portrait" width={600}  />
+              <img
+                src="https://zama-musicartist.info/about/images/about_logo.png"
+                alt="Portrait"
+                width={600}
+              />
             </div>
           </div>
         </div>
       </div>
     </main>
-
   </div>
 </Layout>
