--- a/src/components/Artists.astro
+++ b/src/components/Artists.astro
@@ -1,17 +1,13 @@
 ---
 import { PERSONAL_INFO } from "../consts";
 import { images } from "./Artist";
+import MyH2Title from "./MyTitles/MyH2Title.astro";
 export const prerender = true;
 ---
 <div class="py-4 sm:py-6 lg:py-8 flex flex-col justify-between h-full">
   <main class="mb-auto">
     <div class="my-8 sm:my-12">
-      <h2
-        class="text-gray-800 dark:text-white text-2xl md:text-3xl lg:text-4xl text-center mb-4 md:mb-6 font-semibold"
-      >
-        {PERSONAL_INFO.title}
-      </h2>
-
+      <MyH2Title MyTitle={PERSONAL_INFO.title}}/>
       <p
         class="max-w-screen-md dark:text-slate-400 text-gray-500 md:text-lg text-center mx-auto"
       >
