--- a/src/pages/creator/index.astro
+++ b/src/pages/creator/index.astro
@@ -19,7 +19,7 @@ const title = `${name} - About`;
       </div>
 
       <div
-        class="bg-white dark:bg-slate-900 py-4 sm:py-8 w-fit mx-4 rounded-xl"
+        class="py-4 sm:py-8 w-fit mx-4 rounded-xl neumorphism-post"
       >
         <div class="max-w-screen-lg px-4 md:px-8">
           <div class="grid sm:grid-cols-2 gap-8 items-center">
