--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -9,5 +9,7 @@ const entry = await getEntryBySlug(
 );
 const { Content } = await entry.render();
 ---
+<div class="neumorphism-post">
 
-<Content />
+  <Content />
+</div>
