--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -12,7 +12,7 @@ const title = `${name} - Index tag`;;
 ---
 
 <Layout pageTitle={title}>
-  <div class="tags">
+  <div class="tags neumorphism-post">
     {
       tags.map((tag) => (
         <p class="tag">
